feat: get user route
